--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,3 @@
-ion-icon {
-    color:whitesmoke;
-    --ionicon-stroke-width: 80px;
-  }
-
-.green{
-  background-color: green;
-}
-.yellow{
-  background-color: yellow;
-}
-.orange{
-  background-color: orange;
-}
-.red{
-  background-color: red;
-}
-
-.purple{
-  background-color: purple;
+.main {
+  min-height: calc(100vh - 128px);
 }
